force-app/main/default/objects/bdrs__WorkControlSettings__mdt/bdrs__WorkControlSettings__mdt.object-meta.xml
<CustomObject>
    <label>Work Control Settings</label>
    <pluralLabel>WorkControlSettings</pluralLabel>
</CustomObject>