force-app/main/default/objects/bdrs__WorkControlSettings__mdt/fields/bdrs__DaysToKeepFailedLogs__c.field-meta.xml
<CustomField>
    <fullName>bdrs__DaysToKeepFailedLogs__c</fullName>
    <label>Days To Keep Failed Logs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>