force-app/main/default/objects/bdrs__WorkControlSettings__mdt/fields/bdrs__DaysToKeepSuccessLogs__c.field-meta.xml
<CustomField>
    <fullName>bdrs__DaysToKeepSuccessLogs__c</fullName>
    <label>Days to Keep Success Logs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>