force-app/main/default/objects/bdrs__WorkControlSettings__mdt/fields/bdrs__Enabled__c.field-meta.xml
<CustomField>
    <fullName>bdrs__Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>