force-app/main/default/objects/bdrs__WorkControlSettings__mdt/fields/bdrs__ExecutionType__c.field-meta.xml
<CustomField>
    <fullName>bdrs__ExecutionType__c</fullName>
    <label>Execution Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deferred</fullName>
                <default>true</default>
                <label>Deferred</label>
            </value>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Immediate Callout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>