force-app/main/default/objects/bdrs__WorkControlSettings__mdt/fields/bdrs__Priority__c.field-meta.xml
<CustomField>
    <fullName>bdrs__Priority__c</fullName>
    <label>Priority</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>