force-app/main/default/objects/bdrs__WorkControlSettings__mdt/fields/bdrs__Work__c.field-meta.xml
<CustomField>
    <fullName>bdrs__Work__c</fullName>
    <label>Work</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>