force-app/main/default/objects/bdrs__WorkControlSettings__mdt/listViews/bdrs__All.listView-meta.xml
<ListView>
    <fullName>bdrs__All</fullName>
    <columns>MasterLabel</columns>
    <columns>bdrs__Work__c</columns>
    <columns>bdrs__ExecutionType__c</columns>
    <columns>bdrs__Priority__c</columns>
    <columns>bdrs__Enabled__c</columns>
    <columns>bdrs__DaysToKeepFailedLogs__c</columns>
    <columns>bdrs__DaysToKeepSuccessLogs__c</columns>
    <columns>NamespacePrefix</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>